# badminton-analysis-system

./: .gitignore  README.md  config.yaml.example  conftest.py  pyproject.toml
modules/: artifacts.py  base.py  contracts.py  runner.py
modules/common/: config.py  downscale.py  ffmpeg_utils.py  frame_composite.py  progress.py  scores_io.py  segments_io.py  video.py  video_cutter.py
modules/common/bst/: __init__.py  adapter.py  classes.py  features.py  inference.py  model.py
modules/court_detection/: __init__.py  __main__.py  detector.py  interactive.py  module.py
modules/event_detection/: __init__.py  __main__.py  complete.py  config.py  debug.py  dense_cache.py  evidence.py  module.py  prune.py  sides.py  signals.py  streams.py  trajectory.py
modules/match_segmentation/: __init__.py  __main__.py  boundary_refine.py  cross_compare.py  frame_diff.py  module.py  segmenter.py  segments.py
modules/pose/: __init__.py  __main__.py  csv_export.py  detection_cache.py  estimator.py  module.py  overlay.py  select.py
modules/score_recognition/: __init__.py  __main__.py  module.py  recognizer.py
modules/shuttle_tracking/: __init__.py  __main__.py  blob.py  heatmap_cache.py  inference.py  module.py  track_inpaint.py  track_viterbi.py  tracknet.py
modules/stroke_classification/: __init__.py  __main__.py  config.py  debug.py  module.py  predict.py
tests/: test_bst.py  test_bst_equivalence.py  test_config.py  test_court_detection.py  test_event_detection.py  test_input_errors.py  test_pose.py  test_score_recognition.py  test_segments_data.py  test_shuttle_tracking.py  test_stroke_classification.py
