[project]
name = "badminton-analysis-system"
version = "0.1.0"
description = "本地端羽球比賽分析系統"
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "numpy>=2",
    "opencv-python",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"