[project]
name = "badminton-analysis-system"
version = "0.1.0"
description = "本地端羽球比賽分析系統"
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "numpy>=2",
    "opencv-python",
    "pillow",
    "pyyaml>=6.0.3",
    "rtmlib>=0.0.13",
    "scipy>=1.14",
    "torch>=2.6",
    # The pose stage runs RTMPose through onnxruntime. onnxruntime and onnxruntime-gpu
    # install the same `onnxruntime` package and must never share an environment, so
    # exactly one of them is selected per platform: the CUDA build where an NVIDIA GPU
    # is possible, the plain build on macOS (where there is no CUDA wheel at all).
    #
    # The <1.23 pin is what makes the GPU work at all. onnxruntime-gpu 1.23+ is built
    # against CUDA 13, while torch above is the CUDA 12.8 build — so the newer wheel
    # looks for cublasLt64_13.dll, fails to create the CUDA provider, and silently runs
    # the whole stage on the CPU (~2.5x slower). Pinned to the CUDA 12 generation it
    # loads the cuDNN/cuBLAS DLLs torch already ships in torch/lib (see
    # modules.pose.estimator), so any machine whose torch sees the GPU gets a GPU here
    # too, with nothing extra to install. Lift this pin only together with torch's CUDA
    # version.
    "onnxruntime-gpu>=1.22,<1.23; sys_platform == 'win32' or sys_platform == 'linux'",
    "onnxruntime>=1.22; sys_platform == 'darwin'",
]

[dependency-groups]
dev = [
    "pytest",
    # Only so tests/test_bst_equivalence.py can import the reference implementation still
    # sitting in the repo root (bst_infer_standalone.py), which reads its inputs with
    # pandas. Nothing under modules/ uses it. Remove both together.
    "pandas",
]

# rtmlib depends on plain `onnxruntime`, which would collide with the onnxruntime-gpu
# above. Overriding it with a marker that is only true on macOS drops that requirement
# everywhere else, leaving our own platform split (see dependencies) in charge.
[tool.uv]
override-dependencies = ["onnxruntime; sys_platform == 'darwin'"]

# PyPI ships CPU-only torch wheels on Windows, and shuttle_tracking is ~8x slower
# without a GPU — so on Windows and Linux torch comes from PyTorch's CUDA 12.8 index
# instead (RTX 20-series and newer). That index has no macOS wheels, so macOS is left
# on PyPI, where torch already ships with Metal support. A machine with no NVIDIA GPU
# still resolves fine here: the CUDA build simply falls back to the CPU at runtime,
# and the stage says so loudly when it does.
[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"